# towerops-agent

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  AUTO_UPDATE_SETUP.md  CHECKS  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.netsnmp  INTEGRATION_TEST_PLAN.md  Makefile  Procfile  README.md  RELEASE.md  SECURITY_AUDIT.md  USER_GUIDE.md  VERSIONING.md  VERSION_FIX.md  WATCHTOWER_MIGRATION.md  agent.go  agent_test.go  app.json  build.rs  checks.go  checks_test.go  docker-compose.example.yml  entrypoint.sh  flake.nix  fly.toml  go.mod  go.sum  hostkeys.go  hostkeys_test.go  known_hosts.json  lldp.go  log.go  log_test.go  main.go  (+17 more)
.cargo/: config.toml
.forgejo/workflows/: renovate.yaml  test.yml
.github/workflows/: ci.yml  netsnmp-base.yml
docs/plans/: 2026-01-31-snmp-trap-listener-design.md
native/: snmp_helper.c  snmp_helper.h
pb/: agent.pb.go
proto/: agent.proto
scripts/: bump-version.sh
src/: api_client.rs  config.rs  health.rs  main.rs  ping.rs  proto.rs  secret.rs  version.rs  websocket_client.rs
src/buffer/: mod.rs  storage.rs
src/metrics/: mod.rs
src/mikrotik/: client.rs  mod.rs  types.rs
src/poller/: executor.rs  mod.rs  scheduler.rs
src/snmp/: client.rs  client_v2.rs  device_poller.rs  mod.rs  neighbor.rs  poller_registry.rs  trap.rs  types.rs
src/ssh/: client.rs
src/tui/: app.rs  events.rs  mod.rs  state.rs  ui.rs
tests/: snmp_crash_test.rs  tls_provider.rs
